# securitysight-localappgui

./: .dockerignore  .env.example  .gitignore  .ssp.env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  collectors.py  dashboard.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  runssp  seed_demo.py  update_repos.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: daily.yml  risk-monitor.yml  tests.yml  weekly.yml
config/: companies.yaml  settings.yaml
deploy/: README.md
deploy/systemd/: portco-dashboard.service  portco-risk-monitor.service  portco-risk-monitor.timer
packaging/: README.md  build_macos.sh  build_windows.ps1  securitysight.spec
pcrm/: __init__.py  assets.py  config.py  lake.py  models.py  pipeline.py  registry.py  runner.py  scoring.py  secrets.py  store.py  web.py
pcrm/collectors/: base.py  censys.py  cisa_kev.py  crtsh.py  hibp.py  leaklookup.py  mallory.py  ransomlook.py  shodan.py  virustotal.py
pcrm/notify/: slack.py
templates/: index.html
tests/: test_api.py  test_assets.py  test_lake.py  test_main.py  test_redaction.py  test_runner.py  test_scoring.py  test_secrets.py  test_store.py  test_update_guards.py
