[project]
name = "portco-risk-monitor"
version = "0.4.0"
description = "Passive attack-surface & threat monitoring for a watchlist of companies"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "Flask>=3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
